updated input.html to output.html

--- a/output.html
+++ b/output.html
@@ -18,6 +18,7 @@
         Here is some <code>monospaced text</code>.  I really like to view boolean phrases
         such as <code>True &amp;&amp; True</code> in monospace.  Bit-shifting <code>120 &lt;&lt; 2</code> and
         <code>&lt;html></code> tags are nice as well. 
+        &lt;a href="https://www.wou.edu">this is a test.&lt;/a>
     </p>
     
     <hr />
